Apply MCP mappings to decompiled sources